css/productPage.css
@font-face {
    font-family: 'Poppins';
    src: url('../fonts/Poppins-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Poppins';
    src: url('../fonts/Poppins-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}
body {
    background-color: #0A0A0A;
    font-family: 'Poppins', sans-serif;
    font-weight: normal;
    font-style: normal;
    margin: 0;
    padding: 0;
}

* {
    box-sizing: border-box;
    color: #ffffff;
}

header {
    position: absolute;
    width: 100%;
    display: flex;
    justify-content: space-between;
    padding: 1.5rem 6rem;
}

.brand {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 2rem;
}

.brand h1 {
    font-weight: normal;
    background: linear-gradient(90deg, #FFFFFF 0%, #628150 45.9%, #82C35C 100%);
    -webkit-background-clip: text;
    color: transparent;
    font-size: 2.2rem;
}

.main-nav {
    display: flex;
    flex-direction: row;
    gap: 2rem;
    align-items: center;
}

.main-nav ul {
    display: flex;
    flex-direction: row;
    gap: 5rem;
    list-style: none;
    align-items: center;
}

.main-nav ul li a {
    text-decoration: none;
    font-size: 1.2rem;
    color: #ffffff;
}
.top-banner{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    flex-direction: column;
}
.banner {
    background-image: url(../productpage-banner.png);
    background-size: cover;
    background-position: center center;
    width: 80vw;
    height: 60vh;
    margin-bottom: 2rem;
    border-radius: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative; 
  }
  
  .banner::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.4); 
    border-radius: 15px; 
  }
.banner h1{
    font-size: 7rem;
    font-weight: bold;
    z-index: 2;
    text-align: center;
    text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7);
}
.search-bar {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    margin-top: 2rem;
}
.search{
    width: 40rem;
    height: 4rem;
    border: none;
    border-radius: 40px;
    padding: 0 1rem;
    font-size: 1.2rem;
    background: none;
    border: white 1px solid;
}
.filter{
    display: flex;
    width: 4rem;
    height: 4rem;
    border: none;
    border-radius: 40px;
    padding: 0 1rem;
    font-size: 1.2rem;
    background: none;
    border: white 1px solid;
    justify-content: center;
    align-items: center;
}
.upload{
    display: flex;
    width: 4rem;
    height: 4rem;
    border: none;
    border-radius: 40px;
    padding: 0 1rem;
    font-size: 1.2rem;
    background: none;
    border: white 1px solid;
    justify-content: center;
    align-items: center;
}
.search-bar img{
    width: 2rem;
    height: 2rem;
}
.upload, .filter{
    cursor: pointer;
}
.products {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 2rem;
    flex-direction: column;
}
.product-card-container {
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(4,1fr);
    gap: 1.5rem;
    width: 80vw;
}
.end{
    background: none;
    font-size: 1.8rem;
    margin: 2rem 0;
    display: none;
    text-align: center;
}

.gradient-blur img {
    max-width: 100%;
    border-radius: 15px;
    object-fit: cover;
}

.gradient-blur {
    position: relative;
    z-index: 5;
    pointer-events: none;
    border-radius: 15px;
}
.product-card {
    flex: 1 1 25%;
    cursor: pointer;
    border-radius: 15px;
}

.load-more {
    margin: 2rem 0;
    background: none;
    padding: 0.5rem 1rem;
    border: 2px solid #ffffff;
    border-radius: 25px;
    background-color: transparent;
    color: #ffffff;
    text-decoration: none;
    font-size: 16px;
    text-align: center;
    transition: all 0.3s ease;
    cursor: pointer;
}

.load-more:hover {
    background-color: #ffffff4b;
    color: white;
}
.product-card img{
    width: 100%;
    height: 100%;
    border-radius: 15px;
    aspect-ratio: 4/5;
    object-fit: cover;
}
.gradient-blur > div,
.gradient-blur::before,
.gradient-blur::after {
    
    position: absolute;
    inset: 0;
    border-radius: 15px;
}

.gradient-blur > div:nth-of-type(1) {
    z-index: 6;
    backdrop-filter: blur(3px); /* Decreased blur amount */
    mask: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0) 62.5%,
      rgba(0, 0, 0, 1) 75%,
      rgba(0, 0, 0, 1) 87.5%,
      rgba(0, 0, 0, 0) 100%
    );
}

.gradient-blur > div:nth-of-type(2) {
    z-index: 7;
    backdrop-filter: blur(5px); /* Decreased blur amount */
    
    mask: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0) 75%,
      rgba(0, 0, 0, 1) 87.5%,
      rgba(0, 0, 0, 1) 100%
    );
}

.product-info-section {
    position: absolute;
    z-index: 20;
    bottom: 0;
    left: 0;
    padding: 1rem;
    font-size: 0.9rem;
}
.product-info-section h2, .product-info-section p{
    margin-bottom: 0rem;
    margin-top: 0.5rem;
    font-weight: normal;
}

.popup {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(5px); /* Blurs the background */
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 999;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease, visibility 0.3s ease;
}
.popup-content {
    width: 70vw;
    height: 80vh;
    background-color: #0B192C;
    border-radius: 20px;

}
.uploadContainer{
    display: flex;
    flex-direction: row;
    justify-content: center;
    /* align-items: center; */
    gap: 10rem;
}
.uploadLeft{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 2rem;
    border-radius: 25px;
    outline: 4px dashed white;
    padding: 1rem;
    width: 40%;
    height: 40%;
    cursor: pointer;
}
.uploadImage{
    width: 20rem;
}
.uploadInput, select, option{
    background-color: #FFFFFF;
    width: 20rem;
    height: 2.2rem;
    color: black;
    font-size: 1rem;
    border-radius: 5px;
}
.uploadRight form{
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    margin-top: 2rem;
    align-items: center;
}
.uploadButton{
    width: 10rem;
    height: 4rem;
    color: white;
    font-size: 1rem;
    border-radius: 5px;
    cursor: pointer;
    background-color: #2507AB;
    border: none;
    margin-top: 1rem;
    font-weight: bold;
}
#description {
    line-height: 1.2;
    text-align: left;
    height: 8rem;
}
.close-btn {
    position: relative;
    top: 1rem;
    left: 1rem;
    font-size: 30px;
    background: transparent;
    border: none;
    color: white;
    font-size: 2.5rem;
    cursor: pointer;
}
#dotlottie-canvas {
    position: fixed; /* Keeps it on top */
    top: 50%;
    left: 50%;
    width: 100vw; /* Half of the viewport width */
    height: 100vh; /* Half of the viewport height */
    transform: translate(-50%, -50%); /* Centers it */
    z-index: 1000; /* Ensures it appears above all elements */
    background: rgba(255, 255, 255, 0.3); /* Optional: semi-transparent background */
    backdrop-filter: blur(20px); /* Optional: blur the background */
    border-radius: 10px; /* Optional: rounded corners */
    display: none; /* Initially hidden */
}
#dotlottie-animation {
    position: fixed;

    width: 50vw; /* Half of screen width */
    height: 50vh; /* Half of screen height */
    z-index: 1001;
    transform-origin: 50% 50%;
    transform-box: fill-box;
    display: none; /* Initially hidden */
}

